fixed nav on mobile

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -3546,6 +3546,11 @@ body.demo {
     border-color: transparent;
   }
 
+  .navbar-collapse.visible {
+    display: block;
+  }
+
+
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #111111;
   }
